[package]
name = "evm-test-suite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ethereum-types = { version = "0.13.1" }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
# block_chain_tests
ethers-core = "0.13"
evm = { version = "0.35", features = ["tracing"] }

